[gd_scene load_steps=17 format=2]

[ext_resource path="res://challenges/week8/scenes/map/map.tscn" type="PackedScene" id=1]
[ext_resource path="res://challenges/week8/scenes/door/door.tscn" type="PackedScene" id=2]
[ext_resource path="res://challenges/week8/scenes/main.gd" type="Script" id=3]
[ext_resource path="res://challenges/week8/scenes/character/character.tscn" type="PackedScene" id=4]
[ext_resource path="res://challenges/week8/scenes/life/life.tscn" type="PackedScene" id=5]
[ext_resource path="res://challenges/week8/gfx/life/life_container.webp" type="Texture" id=6]
[ext_resource path="res://common/fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://common/scenes/finishGame.tscn" type="PackedScene" id=8]
[ext_resource path="res://common/sfx/error/error.wav" type="AudioStream" id=9]
[ext_resource path="res://common/sfx/win/finish_521640__fupicat__winbanjo.ogg" type="AudioStream" id=10]
[ext_resource path="res://common/sfx/win/615099__mlaudio__magic-game-win-success.wav" type="AudioStream" id=11]
[ext_resource path="res://common/sfx/flames/540831__eminyildirim__fire-fuse-ignite-flame-mid.mp3" type="AudioStream" id=12]
[ext_resource path="res://common/sfx/music/looperman-l-2776354-0311050-8bit-pad-mario-the-hedgehog-by-sayvmei.mp3" type="AudioStream" id=13]

[sub_resource type="DynamicFont" id=1]
size = 27
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 7 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 45.5, 305 )

[node name="main" type="Node"]
script = ExtResource( 3 )

[node name="map" parent="." instance=ExtResource( 1 )]

[node name="door_area2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 891, 324 )

[node name="key_container" type="Sprite" parent="."]
position = Vector2( 423, 29 )
scale = Vector2( 0.395, 2.36458 )
texture = ExtResource( 6 )

[node name="bushes" type="Node2D" parent="."]

[node name="timer" type="Node2D" parent="."]

[node name="seconds" type="Label" parent="timer"]
margin_left = 20.0
margin_top = 15.0
margin_right = 84.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )
text = "60"
align = 2

[node name="h_seconds" type="Label" parent="timer"]
margin_left = 80.0
margin_top = 25.0
margin_right = 128.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 2 )
text = ".99"

[node name="life" parent="." instance=ExtResource( 5 )]
position = Vector2( 796, 25 )

[node name="character" parent="." instance=ExtResource( 4 )]
position = Vector2( 272, 342 )
__meta__ = {
"_edit_group_": true
}

[node name="Key_captured_position" type="Position2D" parent="."]
position = Vector2( 423, 29 )

[node name="finishGame" parent="." instance=ExtResource( 8 )]
visible = false

[node name="winning_zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="winning_zone"]
position = Vector2( 974.5, 299 )
shape = SubResource( 3 )

[node name="winning_zone_timer" type="Timer" parent="winning_zone"]
wait_time = 0.5
one_shot = true

[node name="lava_timers" type="Node" parent="."]

[node name="lava_time_timer" type="Timer" parent="lava_timers"]
one_shot = true

[node name="check_is_lava_timer" type="Timer" parent="lava_timers"]
process_mode = 0
wait_time = 0.2

[node name="lava_life_timer" type="Timer" parent="lava_timers"]
process_mode = 0
one_shot = true

[node name="sfx" type="Node" parent="."]

[node name="GameOverSound" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 9 )

[node name="WinSound" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 10 )

[node name="GetKeySound" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 11 )

[node name="BurningSound" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 12 )

[node name="Music" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 13 )
volume_db = -10.0

[node name="limits" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="limits"]
polygon = PoolVector2Array( 859, 622, -11, 617, -15, -27, 1016, -23, 1026, -77, -53, -71, -43, 658, 918, 658 )

[connection signal="damaged_by_lava" from="." to="life" method="_on_main_damaged_by_lava"]
[connection signal="empty_life" from="life" to="." method="_on_life_empty_life"]
[connection signal="body_entered" from="winning_zone" to="." method="_on_winning_zone_body_entered"]
[connection signal="timeout" from="winning_zone/winning_zone_timer" to="." method="_on_winning_zone_timer_timeout"]
[connection signal="timeout" from="lava_timers/lava_time_timer" to="." method="_on_lava_time_timer_timeout"]
[connection signal="timeout" from="lava_timers/check_is_lava_timer" to="." method="_on_check_is_lava_timer_timeout"]
[connection signal="timeout" from="lava_timers/lava_life_timer" to="." method="_on_lava_life_timer_timeout"]
